k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-to-async
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: mysql-to-async.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysql-to-async
                port:
                  number: 8080
